crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@128.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d1, 'FMDAY FMDay FMday FMMONTH FMMonth FMmonth FMRM')\n   FROM TIMESTAMP_TBL;"
---
SelectStmt@0..91
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    FuncCall@7..67
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "d1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..67
        Sconst@19..67 "'FMDAY FMDay FMday FM ..."
  Ascii41@67..68 ")"
  Newline@68..69 "\n"
  Whitespace@69..72 "   "
  From@72..76 "FROM"
  Whitespace@76..77 " "
  RangeVar@77..90
    Ident@77..90 "TIMESTAMP_TBL"
  Ascii59@90..91 ";"

