crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@131.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d1, 'HH HH12 HH24 MI SS SSSS')\n   FROM TIMESTAMP_TBL;"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..44
    FuncCall@7..44
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "d1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..44
        Sconst@19..44 "'HH HH12 HH24 MI SS S ..."
  Ascii41@44..45 ")"
  Newline@45..46 "\n"
  Whitespace@46..49 "   "
  From@49..53 "FROM"
  Whitespace@53..54 " "
  RangeVar@54..67
    Ident@54..67 "TIMESTAMP_TBL"
  Ascii59@67..68 ";"

