crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@134.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d1, 'YYYYTH YYYYth Jth')\n   FROM TIMESTAMP_TBL;"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "d1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..38
        Sconst@19..38 "'YYYYTH YYYYth Jth'"
  Ascii41@38..39 ")"
  Newline@39..40 "\n"
  Whitespace@40..43 "   "
  From@43..47 "FROM"
  Whitespace@47..48 " "
  RangeVar@48..61
    Ident@48..61 "TIMESTAMP_TBL"
  Ascii59@61..62 ";"

