crates/pg_syntax/tests/snapshots/postgres_regress/timestamp@136.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_char(d1, 'IYYY IYY IY I IW IDDD ID')\n   FROM TIMESTAMP_TBL;"
---
SelectStmt@0..69
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..45
    FuncCall@7..45
      Ident@7..14 "to_char"
      Ascii40@14..15 "("
      ColumnRef@15..17
        Ident@15..17 "d1"
      Ascii44@17..18 ","
      Whitespace@18..19 " "
      AConst@19..45
        Sconst@19..45 "'IYYY IYY IY I IW IDD ..."
  Ascii41@45..46 ")"
  Newline@46..47 "\n"
  Whitespace@47..50 "   "
  From@50..54 "FROM"
  Whitespace@54..55 " "
  RangeVar@55..68
    Ident@55..68 "TIMESTAMP_TBL"
  Ascii59@68..69 ";"

